code commit@Rahul
bug resolution of store , indent , itemopening and mrn

--- a/src/main/resources/templates/layouts/Master/itemMaster.html
+++ b/src/main/resources/templates/layouts/Master/itemMaster.html
@@ -179,8 +179,8 @@
 																			th:text="${store.storeCode}"
 																			th:value=" ${store.storeCode}">
 																		</option>-->
-																			<option value="c">Capax</option>
-																			<option value="n">Non-Capax</option>
+																			<option value="C">Capax</option>
+																			<option value="N">Non-Capax</option>
 																		</select>
 																	</div>
 
