--- a/src/main/resources/templates/layouts/editview/editItem.html
+++ b/src/main/resources/templates/layouts/editview/editItem.html
@@ -147,8 +147,8 @@
 																			th:text="${store.storeCode}"
 																			th:value=" ${store.storeCode}">
 																		</option>-->
-																			<option value="capax">Capax</option>
-																			<option value="noncapax">Non-Capax</option>
+																			<option value="C">Capax</option>
+																			<option value="N">Non-Capax</option>
 																		</select>
 																	</div>
 
