--- a/src/main/resources/templates/layouts/editview/editMrn.html
+++ b/src/main/resources/templates/layouts/editview/editMrn.html
@@ -317,7 +317,7 @@ iframe {
 																		<th scope="col" class="text-center"
 																			style="width: 90px;">Item Name</th>
 																		<th scope="col" class="text-center"
-																			style="width: 90px;">Account Name</th>
+																			style="width: 90px;">Store Name</th>
 																		<th scope="col" class="text-center"
 																			style="width: 10px;">UOM</th>
 																		<th scope="col" class="text-center"
@@ -350,7 +350,7 @@ iframe {
 																			style="width: 120px;">Remarks</th>
 
 																		<th scope="col" class="text-center"
-																			style="width: 120px;">DOL</th>
+																			style="width: 120px;">Inspection Required</th>
 
 
 
