--- a/src/main/resources/templates/layouts/listview/listofitem.html
+++ b/src/main/resources/templates/layouts/listview/listofitem.html
@@ -81,7 +81,7 @@
 
 															<td><span> <a
 																	th:href="@{/item/edit/{id}(id=${item.itemCode})}">
-																		<em class="fa fa-edit" style="color: blue;"> Edit</em>
+																		<em class="fa fa-edit" style="color: blue;"> View</em>
 																</a></span> <span> <a
 																	th:href="@{/item/delete/{id}(id=${item.itemCode})}"><em
 																		class="fa fa-times" style="color: red"> Remove</em></a></span></td>
