--- a/src/main/resources/templates/layouts/Master/itemOpening.html
+++ b/src/main/resources/templates/layouts/Master/itemOpening.html
@@ -174,6 +174,7 @@
 													<div class="form-group col-md-6">
 														<label for="inputEmail4">Opening Stock</label> <input
 															type="number" class="form-control floatNumberField"
+															id="openingStock" onkeyup="typeOpeningStock()"
 															th:field="*{openingStock}" title="opening stock"
 															style="text-align: right">
 													</div>
@@ -181,6 +182,7 @@
 
 													<div class="form-group col-md-6">
 														<label for="inputEmail4">Current Stock</label> <input
+															id="currentStock"
 															type="number" class="form-control floatNumberField"
 															placeholder="Current Stock" th:field="*{currentStock}"
 															title="current stock" style="text-align: right">
@@ -233,6 +235,12 @@
 			document.getElementById('openingDate').valueAsDate = new Date();
 
 		});
+		
+		function typeOpeningStock(){
+			
+			var openingStock = document.getElementById("openingStock").value;
+			document.getElementById("currentStock").value = openingStock;
+		}
 	</script>
 
 
@@ -277,8 +285,15 @@
 				success : function(data) {
 					//$("#resultarea").text(data);
 					console.log("response data : " + data);
-					//$("#itemDescription").val(data.description);
-					$("#itemType").val(data.itemType)
+					//$("#itemDescription").val(data.description); 
+					
+					if(data.storeInfo==="C"){
+						$("#itemType").val("Capex")
+					}
+					if(data.storeInfo==="N"){
+						$("#itemType").val("Non-Capex")
+					}
+					
 					$("#category").val(data.category.categCode)
 					$("#itemUom").val(data.uom.uomCode)
 				},
