--- a/src/main/resources/templates/layouts/listview/listofOpenIndent.html
+++ b/src/main/resources/templates/layouts/listview/listofOpenIndent.html
@@ -62,30 +62,26 @@
 													</thead>
 													<tbody>
 														<tr th:each="indent,iter  : ${openIndentList}">
-															<td th:text="${iter.index}">1</td>
+															<td th:text="${iter.index}+1">1</td>
 															<td th:text="${indent.indentNumber}">Garrett Winters</td>
-															<td th:text="${#dates.format(indent.indentDate, 'dd-MMM-yyyy')}">Garrett Winters</td>
+															
+															<td
+																th:text="${#dates.format(indent.indentDate, 'dd-MMM-yyyy')}">Garrett
+																Winters</td>
 
 
 
 															<!-- <td><span class="badge bg-success">Active</span></td> -->
 
-															<td>
-															<span th:if="${indent.approvalStatus1=='N'}"> <a
+															<td><span th:if="${indent.approvalStatus=='N'}">
+																	<a
 																	th:href="@{/openindent/edit/{id}(id=${indent.indentNumber})}"><em
-																		class="fa fa-edit" style="color: blue;"> Edit</em></a></span> 
-																		
-																<span th:if="${indent.approvalStatus1=='Y'}"> <a
+																		class="fa fa-edit" style="color: blue;"> Edit</em></a>
+															</span> <span th:if="${indent.approvalStatus=='Y'}"> <a
 																	th:href="@{/openindent/view/{id}(id=${indent.indentNumber})}"><em
-																		class="fa fa-edit" style="color: blue;"> View</em></a></span> 
-																		
-																	
-																		
-																		
-																		
-																		<span>
-																		
-																		
+																		class="fa fa-edit" style="color: #6699ff;"> View</em></a></span> <span>
+
+
 																	<a
 																	th:href="@{/openindent/delete/{id}(id=${indent.indentNumber})}"><em
 																		class="fa fa-times" style="color: red"> Remove</em></a>
